# simulator

./: .gitmodules  FEATURE_REQUIREMENTS_EXAMPLE_RUNTIME_TASK_LOADING.md  FEATURE_REQUIREMENTS_TEMPLATE.md  GENERAL_REQUIREMENTS.md  PIPELINE.md  pyproject.toml
.github/: pull_request_template.md
architecture/: ARCHITECTURE_BROAD_STROKES.md  ARCHITECTURE_CHECKLIST.md  ARCHITECTURE_CONFORMANCE_CHECKLIST.md  ARCHITECTURE_REVIEW.md  MVC_BOUNDARIES.md  capture-schema-versioning.md  component-diagram.md  config-model.md  context-diagram.md  contract-mapping.md  data-flow-overview.md  deployment-topology.md  domain-model.md  error-codes.md  event-model.md  interface-inventory.md  logging-observability.md  port-contracts.md  risk-register.md  sequence-capture-replay.md  sequence-run.md  sequence-task-load.md  task-format.md  test-strategy.md  transport-spec.md  verification-roadmap.md  verification-spec.md
captures/: cap-4d7bc9a91ce0.capture.json  cap-5f966fb95d10.capture.json  cap-95b5448650e0.capture.json  cap-b3826b97f30d.capture.json  cap-b51e4a37d1ab.capture.json  cap-b75d686014d1.capture.json  cap-bcaa365f6518.capture.json  cap-ea7401c1f43d.capture.json  cap-fafb9ed6fa11.capture.json
docs/: HELP_CONTENT.md  MODULAR_BOUNDARIES.md  PORTABILITY_MATRIX.md  THIRD_PARTY_LIBS.md
requirements/: GENERAL_REQUIREMENTS.md  SRS_DRAFT.md
scaffolding/: README.md  adapter_template.py  config_template.py  error_handling_template.py  port_template.py  workflow_template.py
scripts/: architecture_boundary_check.py  ci_test_runner.py  gui_tui_smoke_check.py  nfr_benchmark.py  (+2 more)
(+257 files in other folders)
