[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulator"
version = "0.1.0"
description = "Robust, generic, stateless desktop simulator for target simulation"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
simulator = "simulator.app.__main__:main"
